<resources>
    <string name="app_name">Books</string>
    <string name="error_data_message">Error Loading Data From Google Books API</string>
    <string name="error_message">Check Internet Connection; Then Try Again.</string>
    <string name="todo">TODO</string>
    <string name="action_search">Search</string>
    <string name="hint_title">Insert Title</string>
    <string name="hint_author">Insert Author</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_isbn">Insert ISBN</string>
    <string name="search">Search</string>
    <string name="description">Description Unavailable!!</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="no_search_data">Please Insert Valid Search Terms</string>
</resources>
